-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12
-
a2c9f9433a772c03e6aaf820910487d794280c3a (qt/qtbase/5.12) 59b29d03b2fff8a138382d45077c81fe0d4b8ea8 (qt/qtbase/5.13)
Example failure:
agent:2019/02/04 10:00:34 build.go:192: ********* Start testing of tst_QGraphicsItem ********* agent:2019/02/04 10:00:34 build.go:192: Config: Using QtTest library 5.12.2, Qt 5.12.2 (x86_64-little_endian-llp64 static release build; by MSVC 2015) agent:2019/02/04 10:00:34 build.go:192: PASS : tst_QGraphicsItem::initTestCase() agent:2019/02/04 10:00:34 build.go:192: FAIL! : tst_QGraphicsItem::cursor() Compared values are not the same agent:2019/02/04 10:00:34 build.go:192: Actual (((view.viewport()->cursor().shape()))): ArrowCursor agent:2019/02/04 10:00:34 build.go:192: Expected (item1->cursor().shape()) : IBeamCursor agent:2019/02/04 10:00:34 build.go:192: tst_qgraphicsitem.cpp(4199) : failure location agent:2019/02/04 10:00:34 build.go:192: PASS : tst_QGraphicsItem::cleanupTestCase() agent:2019/02/04 10:00:34 build.go:192: Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 15528ms agent:2019/02/04 10:00:34 build.go:192: ********* Finished testing of tst_QGraphicsItem *********
For Gerrit Dashboard: QTBUG-73545 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
252147,2 | Blacklist tst_QGraphicsItem::cursor on WinRT | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |
252258,3 | winrt: Handle WaitForWindowExposed | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |
267502,3 | Further stabilization of QGraphicsItem::cursor test | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |